--- a/less/utilities/_text.less
+++ b/less/utilities/_text.less
@@ -17,7 +17,12 @@
 
 }
 
+[lang] { hyphens: auto; }
+
 .text {
+    &-hyphens {
+        hyphens: auto;
+    }    
     &-truncate {
         overflow: hidden;
         text-overflow: ellipsis;
